# NSX04

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  setup.sh  setup8086.sh  test.sh
.github/workflows/: ci.yml
demo/: hal4004.btc  hal4004.html  intel4004.html  nsx4004.html
docs/: BUILD_GUIDE.md  LICENSE-PATENTS.md  PROJECT_PHILOSOPHY.md  README_DUCKER.md  README_TRAN4004.md  TLDR.md
scripts/: asm4004.py  build.sh  clean.sh  duckasm.py  gen_basis_lut.py  gen_deriv_lut.py  gen_exp_lut.py  hexdump.py  test.sh  visualize_training.py
src/asm/: ducker.asm  edgecase.asm  hell8086.asm  infr4004.asm  stardust.asm  tran4004.asm
test/asmcases/: mixedcase_labels.asm  multidigit_registers.asm  whitespace.asm
